objects/Field_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Buildout_Needed__c</fullName>
        <label>Additional Buildout Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Electrical_Work_Needed__c</fullName>
        <label>Additional Electrical Work Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day of Transition</fullName>
                </value>
                <value>
                    <fullName>Prior to Transition</fullName>
                </value>
                <value>
                    <fullName>Post Transition</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buildout_Estimate_Approved_Amount__c</fullName>
        <label>Buildout Estimate Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buildout_Estimate_Received_Date__c</fullName>
        <label>Buildout Estimate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buildout_Progress__c</fullName>
        <label>Buildout Progress</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buildout_Start_Date__c</fullName>
        <label>Buildout Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_of_Record__c</fullName>
        <label>Contractor of Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_placement_of_the_RT__c</fullName>
        <label>Describe placement of the RT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_placement__c</fullName>
        <inlineHelpText>Describe the placement of the gaming area in relation to the layout of the establishment.</inlineHelpText>
        <label>Description of placement</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electrical_Estimate_Approved_Amount__c</fullName>
        <label>Electrical Estimate Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electrical_Estimate_Received_Date__c</fullName>
        <label>Electrical Estimate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Scheduled_Date__c</fullName>
        <label>Electrical Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Work_Status__c</fullName>
        <label>Electrical Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical Work Not Needed</fullName>
                </value>
                <value>
                    <fullName>Electrical Work Needed</fullName>
                </value>
                <value>
                    <fullName>Electrical Work Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Buildout_Completion_Date__c</fullName>
        <label>Estimated Buildout Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Buildout_Start_Date__c</fullName>
        <label>Estimated Buildout Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Assigned_Date__c</fullName>
        <description>Field value is updated by automation when &quot;Assigned to&quot; is populated. 
https://accel-entertainment.monday.com/boards/942883797/pulses/3840353900</description>
        <label>Field Assessment Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Scheduled_Date__c</fullName>
        <description>referenced in formula field with same name in Project</description>
        <label>Field Assessment Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gaming_Area_Partition__c</fullName>
        <label>Gaming Area Partition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No walls</fullName>
                </value>
                <value>
                    <fullName>Half Walls (something less than floor to ceiling)</fullName>
                </value>
                <value>
                    <fullName>Separate Room - Floor to Ceiling Walls</fullName>
                </value>
                <value>
                    <fullName>Not fully enclosed - includes stanchions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Area_Square_Footage__c</fullName>
        <label>Gaming Area Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gaming_Experience__c</fullName>
        <formula>TEXT(Field_Assessment__r.Gaming_Experience__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gaming Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Equip_Layout_Change_Form_Completed__c</fullName>
        <label>IGB Equip/Layout Change Form Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Gaming_Area_Commitments__c</fullName>
        <inlineHelpText>Are there any layout and gaming area commitments?</inlineHelpText>
        <label>Layout &amp; Gaming Area Commitments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layout_Submitted_Date__c</fullName>
        <label>Layout Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_of_Changes_Additions__c</fullName>
        <inlineHelpText>Please select all that apply.</inlineHelpText>
        <label>Changes: Select All That Apply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic Changes (i.e. paint, flooring)</fullName>
                </value>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Ground Up Build</fullName>
                </value>
                <value>
                    <fullName>Gaming Room Addition</fullName>
                </value>
                <value>
                    <fullName>Full Interior Gut</fullName>
                </value>
                <value>
                    <fullName>Location is ready for electrical work</fullName>
                </value>
                <value>
                    <fullName>Electric work completed</fullName>
                </value>
                <value>
                    <fullName>No buildout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_gaming_TV_in_gaming_area__c</fullName>
        <inlineHelpText>Does the TV feature non-gaming content, i.e. ESPN, CNN, etc)?</inlineHelpText>
        <label>Non-gaming TV in gaming area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager_Notes__c</fullName>
        <label>Project Manager Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <formula>text(Project__r.Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_VGT_Setup__c</fullName>
        <label>Proposed VGT Setup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-line (one wall)</fullName>
                </value>
                <value>
                    <fullName>In-line split (multiple walls)</fullName>
                </value>
                <value>
                    <fullName>In-line with standalone</fullName>
                </value>
                <value>
                    <fullName>In-line with back to back</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Back-to-back with end cap</fullName>
                </value>
                <value>
                    <fullName>Half_Moon</fullName>
                    <label>Half Moon</label>
                </value>
                <value>
                    <fullName>Stand alone (greater than 16&quot; apart)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_of_RT_to_nearest_windows_doors__c</fullName>
        <label>Proximity of RT to nearest windows/doors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5-10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_of_gaming_area_to_bar__c</fullName>
        <label>Proximity of gaming area to bar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5-10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_of_gaming_area_to_bathroom__c</fullName>
        <label>Proximity of gaming area to bathroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5-10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_of_gaming_area_to_front_door__c</fullName>
        <label>Proximity of gaming area to front door</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 4 feet</fullName>
                </value>
                <value>
                    <fullName>5-10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Relocate__c</fullName>
        <label>RT Relocate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Day of Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relocate_IGB_Approved__c</fullName>
        <label>Relocate IGB Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relocate_Request_Submitted__c</fullName>
        <label>IGB Equip/Layout Change Form Submit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spacer_Request__c</fullName>
        <label>Spacer Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No spacers (machines in contact)</fullName>
                </value>
                <value>
                    <fullName>No spacers (VGTs set as standalone)</fullName>
                </value>
                <value>
                    <fullName>Standard Spacers</fullName>
                </value>
                <value>
                    <fullName>Custom spacers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Layout Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Layout Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Buildout__c</fullName>
        <label>Type of Buildout</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Buildout</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_Required_Disconnect__c</fullName>
        <label>VGT Required Disconnect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAS 1</fullName>
                </value>
                <value>
                    <fullName>SAS 2</fullName>
                </value>
                <value>
                    <fullName>SAS 3</fullName>
                </value>
                <value>
                    <fullName>SAS 4</fullName>
                </value>
                <value>
                    <fullName>SAS 5</fullName>
                </value>
                <value>
                    <fullName>SAS 6</fullName>
                </value>
                <value>
                    <fullName>SAS 7</fullName>
                </value>
                <value>
                    <fullName>SAS 8</fullName>
                </value>
                <value>
                    <fullName>SAS 9</fullName>
                </value>
                <value>
                    <fullName>SAS 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Assessment</label>
    <listViews>
        <fullName>All_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Field Assessments</label>
    </listViews>
    <listViews>
        <fullName>Competitor_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Assessment__c.Competitor</value>
        </filters>
        <label>Competitor Field Assessments</label>
    </listViews>
    <listViews>
        <fullName>Completed_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Field Assessments</label>
    </listViews>
    <listViews>
        <fullName>Consultation_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Assessment__c.Consultation</value>
        </filters>
        <label>Consultation Field Assessments</label>
    </listViews>
    <listViews>
        <fullName>New_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Field Assessments</label>
    </listViews>
    <listViews>
        <fullName>Organic_Field_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Buildout__c</columns>
        <columns>Status__c</columns>
        <columns>Buildout_Start_Date__c</columns>
        <columns>Buildout_Progress__c</columns>
        <columns>Estimated_Buildout_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Assessment__c.Organic</value>
        </filters>
        <label>Organic Field Assessments</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Field Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Assessments</pluralLabel>
    <recordTypes>
        <fullName>Add_Swap_Reconfigure</fullName>
        <active>true</active>
        <label>Add/Swap/Reconfigure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultation</fullName>
        <active>true</active>
        <description>Consultation type Field Assessment is used for PM to meet with Location Owner to discuss build out.</description>
        <label>Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organic</fullName>
        <active>true</active>
        <label>Organic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>